# scrivi

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac
.tx/: config
data/: Makefile.am  org.gde2.scrivi.gschema.xml.in  scrivi-bugreport.sh.in  scrivi.1  scrivi.appdata.xml.in  scrivi.desktop.in.in  scrivi.pc.in
docs/reference/: Makefile.am  scrivi-docs.sgml  scrivi-sections.txt  scrivi.types
help/: Makefile.am
help/C/: index.docbook  legal.xml
help/ar/: ar.po
help/bg/: bg.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/hu/: hu.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/oc/: oc.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
help/th/: th.po
help/uk/: uk.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
pixmaps/: Makefile.am
plugin-loaders/c/: Makefile.am  scrivi-plugin-loader-c.c  scrivi-plugin-loader-c.h
plugin-loaders/python/: Makefile.am  scrivi-plugin-loader-python.c  scrivi-plugin-loader-python.h  scrivi-plugin-python.c  scrivi-plugin-python.h
plugin-loaders/python/bindings/: Makefile.am  scrivi.defs  scrivi.override  scrivicommands.defs  scrivicommands.override  scrivimessage.override  scriviplugin.override  scriviutils.defs  scriviutils.override
plugins/changecase/: Makefile.am  changecase.scrivi-plugin.desktop.in  scrivi-changecase-plugin.c  scrivi-changecase-plugin.h
plugins/docinfo/: Makefile.am  docinfo.scrivi-plugin.desktop.in  scrivi-docinfo-plugin.c  scrivi-docinfo-plugin.h
plugins/externaltools/: Makefile.am  externaltools.scrivi-plugin.desktop.in
plugins/externaltools/data/: Makefile.am  build.desktop.in  build.tool.in  open-terminal-here.desktop.in  (+7 more)
plugins/filebrowser/: Makefile.am  filebrowser.scrivi-plugin.desktop.in  org.gde2.scrivi.plugins.filebrowser.gschema.xml.in  scrivi-file-bookmarks-store.c  scrivi-file-bookmarks-store.h  scrivi-file-browser-enum-register.c.template  scrivi-file-browser-enum-types.c.template  scrivi-file-browser-enum-types.h.template  scrivi-file-browser-error.h  scrivi-file-browser-messages.c  scrivi-file-browser-messages.h  scrivi-file-browser-plugin.c  scrivi-file-browser-plugin.h  scrivi-file-browser-store.c  scrivi-file-browser-store.h  scrivi-file-browser-utils.c  scrivi-file-browser-utils.h  scrivi-file-browser-view.c  scrivi-file-browser-view.h  scrivi-file-browser-widget.c  scrivi-file-browser-widget.h
plugins/modelines/: Makefile.am  modeline-parser.c  modeline-parser.h  modelines.scrivi-plugin.desktop.in  scrivi-modeline-plugin.c  scrivi-modeline-plugin.h
plugins/pythonconsole/: Makefile.am  pythonconsole.scrivi-plugin.desktop.in
plugins/quickopen/: Makefile.am  quickopen.scrivi-plugin.desktop.in
plugins/snippets/: Makefile.am  snippets.scrivi-plugin.desktop.in
plugins/sort/: Makefile.am  scrivi-sort-plugin.c  scrivi-sort-plugin.h  sort.scrivi-plugin.desktop.in
plugins/spell/: Makefile.am  org.gde2.scrivi.plugins.spell.gschema.xml.in  scrivi-automatic-spell-checker.c  scrivi-automatic-spell-checker.h  scrivi-spell-checker-dialog.c  scrivi-spell-checker-dialog.h  scrivi-spell-checker-language.c  scrivi-spell-checker-language.h  scrivi-spell-checker.c  scrivi-spell-checker.h  scrivi-spell-language-dialog.c  scrivi-spell-language-dialog.h  scrivi-spell-plugin.c  scrivi-spell-plugin.h  scrivi-spell-utils.c  scrivi-spell-utils.h  spell.scrivi-plugin.desktop.in
plugins/taglist/: HTML.tags.xml.in  Latex.tags.xml.in  Makefile.am  XSLT.tags.xml.in  XUL.tags.xml.in  scrivi-taglist-plugin-panel.c  scrivi-taglist-plugin-panel.h  scrivi-taglist-plugin-parser.c  scrivi-taglist-plugin-parser.h  scrivi-taglist-plugin.c  scrivi-taglist-plugin.h  taglist.scrivi-plugin.desktop.in
plugins/time/: Makefile.am  org.gde2.scrivi.plugins.time.gschema.xml.in  scrivi-time-dialog.ui  scrivi-time-plugin.c  scrivi-time-plugin.h  time.scrivi-plugin.desktop.in
plugins/trailsave/: Makefile.am  scrivi-trail-save-plugin.c  scrivi-trail-save-plugin.h  trailsave.scrivi-plugin.desktop.in
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  (+65 more)
scrivi/: Makefile.am  plugde2xtregion.c  plugde2xtregion.h  scrivi-app.c  scrivi-app.h  scrivi-close-button.c  scrivi-close-button.h  scrivi-commands-documents.c  scrivi-commands-edit.c  scrivi-commands-file-print.c  scrivi-commands-file.c  scrivi-commands-help.c  scrivi-commands-search.c  scrivi-commands-view.c  scrivi-commands.h  scrivi-debug.c  scrivi-debug.h  scrivi-dirs.c  scrivi-dirs.h  scrivi-document-input-stream.c  scrivi-document-input-stream.h  scrivi-document-loader.c  scrivi-document-loader.h  scrivi-document-output-stream.c  scrivi-document-output-stream.h  scrivi-document-saver.c  scrivi-document-saver.h  scrivi-document.c  scrivi-document.h  scrivi-documents-panel.c  scrivi-documents-panel.h  scrivi-encodings-combo-box.c  scrivi-encodings-combo-box.h  scrivi-encodings.c  scrivi-encodings.h  scrivi-enum-types.c.template  scrivi-enum-types.h.template  scrivi-file-chooser-dialog.c  scrivi-file-chooser-dialog.h  scrivi-gio-document-loader.c  (+72 more)
scrivi/dialogs/: Makefile.am  scrivi-close-confirmation-dialog.c  scrivi-close-confirmation-dialog.h  scrivi-encodings-dialog.c  scrivi-encodings-dialog.h  scrivi-preferences-dialog.c  scrivi-preferences-dialog.h  scrivi-search-dialog-gtk3.ui  scrivi-search-dialog.c  scrivi-search-dialog.h
scrivi/smclient/: Makefile.am  eggdesktopfile.c  eggsmclient-xsmp.c  eggsmclient.c
tests/: Makefile.am  document-input-stream.c  document-loader.c  document-output-stream.c  document-saver.c  setup-document-saver.sh  smart-converter.c
tools/: generate-plugin.py  preprocessor.py
tools/plugin_template/: Makefile.am  scrivi-plugin.c  scrivi-plugin.desktop.in  scrivi-plugin.h
(+45 files in other folders)
