@YELP_HELP_RULES@
 
HELP_ID = scrivi
HELP_FILES = index.docbook legal.xml
HELP_MEDIA = \
	figures/scrivi_format_bold.png			\
	figures/scrivi_format_italic.png			\
	figures/scrivi_format_strikethrough.png		\
	figures/scrivi_format_underline.png		\
	figures/scrivi_recent_files_menu_icon.png	\
	figures/scrivi_window.png	

HELP_LINGUAS = ar bg ca cs da de el es fi fr hu it ja ko oc pt_BR ru sv th uk zh_CN zh_HK zh_TW


-include $(top_srcdir)/git.mk
